[package]
name = "lazy-image-comparer"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.18.0"
glam = "0.29.0"
image = "0.25.2"
itertools = "0.13.0"
reqwest = "0.12.8"
tokio = { version = "1.40.0", features = ["full"] }

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
